# jj-sync-prs

./: .envrc  .gitignore  Cargo.toml  commands  flake.nix  graph.dot  result
src/: github.rs  graph.rs  main.rs
tests/: temp_jj_repo.rs
tests/common/: mod.rs
